[package]
name = "dungeons-n-diagrams"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
enigo = "0.1.2"
image = "0.24.7"
itertools = "0.11.0"
kemuler = { git = "https://github.com/kemuler/kemuler", version = "0.1.0" }
kemuler-windows = { git = "https://github.com/kemuler/kemuler-windows", version = "0.1.0" }
lz4 = "1.24.0"
lz4_flex = "0.11.1"
win-screenshot = "4.0.5"
windows-sys = { version = "0.48.0", features = ["Win32", "Win32_UI", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_Input_KeyboardAndMouse"] }
winput = "0.2.5"
